# ai-rag-voice-sales-agent

./: .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  README.md
docs/: ARCHITECTURE_v2.md  INDEX.md  rust-ecosystem.md
docs/deployment/: on-premise-banking.md
docs/experiments/: ab-testing-framework.md
plan3/: 00-EXECUTIVE-SUMMARY.md  01-CRITICAL-FINDINGS.md  02-CRATE-BY-CRATE-ANALYSIS.md  03-ARCHITECTURE-ALIGNMENT.md  04-RECOMMENDATIONS.md  05-SCYLLADB-PERSISTENCE.md  INDEX.md
plans/: 00-MASTER-PLAN.md  01-pipeline-plan.md  02-llm-plan.md  03-rag-plan.md  04-agent-plan.md  05-tools-plan.md  06-core-plan.md  07-deep-dives.md
report/: ANALYSIS-SUMMARY.md  FIX-PLAN.md
voice-agent-rust/: Cargo.toml
voice-agent-rust/config/: domain.yaml
voice-agent-rust/crates/agent/: Cargo.toml
voice-agent-rust/crates/agent/benches/: voice_pipeline_bench.rs
voice-agent-rust/crates/agent/src/: agent.rs  conversation.rs  intent.rs  lib.rs  memory.rs  persuasion.rs  stage.rs  voice_session.rs
voice-agent-rust/crates/agent/tests/: voice_pipeline_integration.rs
voice-agent-rust/crates/config/: Cargo.toml
voice-agent-rust/crates/config/src/: agent.rs  domain.rs  gold_loan.rs  lib.rs  pipeline.rs  settings.rs
voice-agent-rust/crates/core/: Cargo.toml
voice-agent-rust/crates/core/src/: audio.rs  conversation.rs  customer.rs  error.rs  lib.rs  transcript.rs
voice-agent-rust/crates/llm/: Cargo.toml
voice-agent-rust/crates/llm/src/: backend.rs  lib.rs  prompt.rs  speculative.rs  streaming.rs
voice-agent-rust/crates/persistence/: Cargo.toml
voice-agent-rust/crates/persistence/src/: appointments.rs  client.rs  error.rs  gold_price.rs  lib.rs  schema.rs  sessions.rs  sms.rs
voice-agent-rust/crates/pipeline/: Cargo.toml
voice-agent-rust/crates/pipeline/src/: lib.rs  orchestrator.rs
voice-agent-rust/crates/pipeline/src/stt/: decoder.rs  indicconformer.rs  mod.rs  streaming.rs
voice-agent-rust/crates/pipeline/src/tts/: chunker.rs  mod.rs  streaming.rs
voice-agent-rust/crates/pipeline/src/turn_detection/: hybrid.rs  mod.rs  semantic.rs
voice-agent-rust/crates/pipeline/src/vad/: magicnet.rs  mod.rs  silero.rs
voice-agent-rust/crates/rag/: Cargo.toml
voice-agent-rust/crates/rag/src/: cache.rs  candle_embeddings.rs  embeddings.rs  lib.rs  reranker.rs  retriever.rs  sparse_search.rs  vector_store.rs
voice-agent-rust/crates/server/: Cargo.toml
voice-agent-rust/crates/server/src/: auth.rs  http.rs  lib.rs  main.rs  rate_limit.rs  session.rs  state.rs  websocket.rs
voice-agent-rust/crates/text_processing/: Cargo.toml
voice-agent-rust/crates/text_processing/src/: error.rs  lib.rs  pipeline.rs
voice-agent-rust/crates/text_processing/src/compliance/: checker.rs  mod.rs  rules.rs
voice-agent-rust/crates/text_processing/src/grammar/: llm_corrector.rs  mod.rs  noop.rs
voice-agent-rust/crates/text_processing/src/pii/: detector.rs  mod.rs  ner.rs  patterns.rs
voice-agent-rust/crates/text_processing/src/translation/: detect.rs  indictrans2.rs  mod.rs  noop.rs
voice-agent-rust/crates/tools/: Cargo.toml
voice-agent-rust/crates/tools/src/: gold_loan.rs  integrations.rs  lib.rs  mcp.rs  registry.rs
voice-agent-rust/crates/transport/: Cargo.toml
voice-agent-rust/crates/transport/src/: codec.rs  lib.rs  session.rs  traits.rs  webrtc.rs
voice-agent-rust/docs/: MODELS.md
voice-agent-rust/scripts/: download_models.sh
voice-agent/backend/: .env.example  rustfmt.toml
voice-agent/backend/config/: __init__.py  constants.py  features.yaml  languages.py  settings.py
voice-agent/backend/crates/agent/: Cargo.toml
voice-agent/backend/crates/agent/benches/: voice_pipeline_bench.rs
voice-agent/backend/crates/agent/src/: agent.rs  conversation.rs  fsm_adapter.rs  intent.rs  lib.rs  memory.rs  persuasion.rs  stage.rs  traits.rs  voice_session.rs
voice-agent/backend/crates/agent/tests/: voice_pipeline_integration.rs
voice-agent/backend/crates/config/src/: agent.rs  branch.rs  competitor.rs  domain.rs  gold_loan.rs  lib.rs  product.rs  prompts.rs  settings.rs
voice-agent/backend/crates/core/src/: audio.rs  compliance.rs  conversation.rs  customer.rs  domain_context.rs  error.rs  language.rs  lib.rs  llm_types.rs  pii.rs  voice_config.rs
voice-agent/backend/crates/llm/src/: adapter.rs  backend.rs  claude.rs  factory.rs  lib.rs  prompt.rs  speculative.rs  streaming.rs
voice-agent/backend/crates/persistence/src/: appointments.rs  audit.rs  client.rs  gold_price.rs  lib.rs  schema.rs  sessions.rs  sms.rs
voice-agent/backend/crates/pipeline/src/: adapters.rs  lib.rs  orchestrator.rs
voice-agent/backend/crates/rag/src/: adapter.rs  agentic.rs  cache.rs  candle_embeddings.rs  compressor.rs  context.rs  cross_lingual.rs  domain_boost.rs  embeddings.rs  knowledge_loader.rs  lib.rs  query_expansion.rs  reranker.rs  retriever.rs  sparse_search.rs  (+1 more)
voice-agent/backend/crates/server/: Cargo.toml
voice-agent/backend/crates/tools/: Cargo.toml
voice-agent/backend/crates/tools/src/: gold_loan.rs  integrations.rs  lib.rs  mcp.rs  registry.rs
voice-agent/backend/orchestration/: __init__.py  model_router.py  orchestrator.py
voice-agent/backend/personalization/: __init__.py  customer_profile.py
voice-agent/backend/plugins/: __init__.py
voice-agent/backend/plugins/llm/: __init__.py  ollama.py
voice-agent/backend/plugins/stt/: __init__.py  indicconformer.py  whisper.py
voice-agent/backend/plugins/translation/: __init__.py  indictrans2.py
voice-agent/backend/plugins/tts/: __init__.py  indicf5.py  parler_tts.py  piper.py
voice-agent/backend/rag/: __init__.py  embeddings.py  enhanced_retriever.py  retriever.py  vector_store.py
voice-agent/backend/tests/: __init__.py  test_orchestration.py  test_pipeline_latency.py  test_rag.py  test_tools.py
voice-agent/frontend/: index.html  package-lock.json  package.json
voice-agent/frontend/src/: App.tsx
voice-agent/frontend/src/components/: CustomerSelect.tsx  MicButton.tsx  Transcript.tsx
voice-agent/frontend/src/hooks/: useVoiceAgent.ts
(+85 files in other folders)
